add remote connection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="az.zero.iotcontroller">
 
+    <uses-permission android:name="android.permission.INTERNET"/>
+
     <application
         android:name=".core.BaseApplication"
         android:allowBackup="true"
@@ -9,6 +11,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="false"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.IOTController">
         <activity
             android:name=".presentation.main.MainActivity"
